--- a/new 1.html
+++ b/new 1.html
@@ -5,5 +5,6 @@
 		<img src="pics/mountains-hero.jpg"/>
 		<img src="C:/Users/User/Desktop/temp1/my site/pics/mountains-hero.jpg"/>
 		<p style="font-size:100px">soft input</p>
+		ggg
 	</body>
 </html>
